maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:14: error: not found: value random
    if (i==atteint){while(!estFaceMur()){avance()};gauche();gauche();i=0;atteint=random(10,20)}
                                                                                 ^